// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toolbar Rendering renders correctly 1`] = `
<div>
  <nav
    class="security--toolbar class"
  >
    <ul
      class="security--toolbar__group"
    >
      <li>
        <button
          aria-expanded="false"
          aria-label="Toggle menu"
          class="security--button--icon security--toolbar__button security--button--icon--tooltip security--button--icon--tooltip--right"
        >
          <svg
            aria-hidden="true"
            class="security--icon security--toolbar__icon"
            fill="currentColor"
            focusable="false"
            height="20"
            preserveAspectRatio="xMidYMid meet"
            style="will-change:transform"
            viewBox="0 0 20 20"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 14.8H18V16H2zM2 11.2H18V12.399999999999999H2zM2 7.6H18V8.799999999999999H2zM2 4H18V5.2H2z"
            />
          </svg>
        </button>
      </li>
      <li>
        <button
          aria-expanded="false"
          aria-label="Toggle settings"
          class="security--button--icon security--toolbar__button security--button--icon--tooltip security--button--icon--tooltip--right"
        >
          <svg
            aria-hidden="true"
            class="security--icon security--toolbar__icon"
            fill="currentColor"
            focusable="false"
            height="20"
            preserveAspectRatio="xMidYMid meet"
            style="will-change:transform"
            viewBox="0 0 32 32"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M27,16.76c0-.25,0-.5,0-.76s0-.51,0-.77l1.92-1.68A2,2,0,0,0,29.3,11L26.94,7a2,2,0,0,0-1.73-1,2,2,0,0,0-.64.1l-2.43.82a11.35,11.35,0,0,0-1.31-.75l-.51-2.52a2,2,0,0,0-2-1.61H13.64a2,2,0,0,0-2,1.61l-.51,2.52a11.48,11.48,0,0,0-1.32.75L7.43,6.06A2,2,0,0,0,6.79,6,2,2,0,0,0,5.06,7L2.7,11a2,2,0,0,0,.41,2.51L5,15.24c0,.25,0,.5,0,.76s0,.51,0,.77L3.11,18.45A2,2,0,0,0,2.7,21L5.06,25a2,2,0,0,0,1.73,1,2,2,0,0,0,.64-.1l2.43-.82a11.35,11.35,0,0,0,1.31.75l.51,2.52a2,2,0,0,0,2,1.61h4.72a2,2,0,0,0,2-1.61l.51-2.52a11.48,11.48,0,0,0,1.32-.75l2.42.82a2,2,0,0,0,.64.1,2,2,0,0,0,1.73-1L29.3,21a2,2,0,0,0-.41-2.51ZM25.21,24l-3.43-1.16a8.86,8.86,0,0,1-2.71,1.57L18.36,28H13.64l-.71-3.55a9.36,9.36,0,0,1-2.7-1.57L6.79,24,4.43,20l2.72-2.4a8.9,8.9,0,0,1,0-3.13L4.43,12,6.79,8l3.43,1.16a8.86,8.86,0,0,1,2.71-1.57L13.64,4h4.72l.71,3.55a9.36,9.36,0,0,1,2.7,1.57L25.21,8,27.57,12l-2.72,2.4a8.9,8.9,0,0,1,0,3.13L27.57,20Z"
            />
            <path
              d="M16,22a6,6,0,1,1,6-6A5.94,5.94,0,0,1,16,22Zm0-10a3.91,3.91,0,0,0-4,4,3.91,3.91,0,0,0,4,4,3.91,3.91,0,0,0,4-4A3.91,3.91,0,0,0,16,12Z"
            />
          </svg>
        </button>
      </li>
      <li>
        <button
          aria-expanded="false"
          aria-label="Toggle support"
          class="security--button--icon security--toolbar__button security--button--icon--tooltip security--button--icon--tooltip--right"
        >
          <svg
            aria-hidden="true"
            class="security--icon security--toolbar__icon"
            fill="currentColor"
            focusable="false"
            height="20"
            preserveAspectRatio="xMidYMid meet"
            style="will-change:transform"
            viewBox="0 0 32 32"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"
            />
            <circle
              cx="16"
              cy="23.5"
              r="1.5"
            />
            <path
              d="M17,8H15.5A4.49,4.49,0,0,0,11,12.5V13h2v-.5A2.5,2.5,0,0,1,15.5,10H17a2.5,2.5,0,0,1,0,5H15v4.5h2V17a4.5,4.5,0,0,0,0-9Z"
            />
          </svg>
        </button>
      </li>
    </ul>
  </nav>
  <span
    class="security--transition"
  />
</div>
`;

exports[`Toolbar Rendering renders the HTML of the node's subtree 1`] = `
<div>
  <nav
    class="security--toolbar class"
  >
    <ul
      class="security--toolbar__group"
    >
      <li>
        <button
          aria-expanded="false"
          aria-label="Toggle menu"
          class="security--button--icon security--toolbar__button security--button--icon--tooltip security--button--icon--tooltip--right"
        >
          <svg
            aria-hidden="true"
            class="security--icon security--toolbar__icon"
            fill="currentColor"
            focusable="false"
            height="20"
            preserveAspectRatio="xMidYMid meet"
            style="will-change:transform"
            viewBox="0 0 20 20"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 14.8H18V16H2zM2 11.2H18V12.399999999999999H2zM2 7.6H18V8.799999999999999H2zM2 4H18V5.2H2z"
            />
          </svg>
        </button>
      </li>
      <li>
        <button
          aria-expanded="false"
          aria-label="Toggle settings"
          class="security--button--icon security--toolbar__button security--button--icon--tooltip security--button--icon--tooltip--right"
        >
          <svg
            aria-hidden="true"
            class="security--icon security--toolbar__icon"
            fill="currentColor"
            focusable="false"
            height="20"
            preserveAspectRatio="xMidYMid meet"
            style="will-change:transform"
            viewBox="0 0 32 32"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M27,16.76c0-.25,0-.5,0-.76s0-.51,0-.77l1.92-1.68A2,2,0,0,0,29.3,11L26.94,7a2,2,0,0,0-1.73-1,2,2,0,0,0-.64.1l-2.43.82a11.35,11.35,0,0,0-1.31-.75l-.51-2.52a2,2,0,0,0-2-1.61H13.64a2,2,0,0,0-2,1.61l-.51,2.52a11.48,11.48,0,0,0-1.32.75L7.43,6.06A2,2,0,0,0,6.79,6,2,2,0,0,0,5.06,7L2.7,11a2,2,0,0,0,.41,2.51L5,15.24c0,.25,0,.5,0,.76s0,.51,0,.77L3.11,18.45A2,2,0,0,0,2.7,21L5.06,25a2,2,0,0,0,1.73,1,2,2,0,0,0,.64-.1l2.43-.82a11.35,11.35,0,0,0,1.31.75l.51,2.52a2,2,0,0,0,2,1.61h4.72a2,2,0,0,0,2-1.61l.51-2.52a11.48,11.48,0,0,0,1.32-.75l2.42.82a2,2,0,0,0,.64.1,2,2,0,0,0,1.73-1L29.3,21a2,2,0,0,0-.41-2.51ZM25.21,24l-3.43-1.16a8.86,8.86,0,0,1-2.71,1.57L18.36,28H13.64l-.71-3.55a9.36,9.36,0,0,1-2.7-1.57L6.79,24,4.43,20l2.72-2.4a8.9,8.9,0,0,1,0-3.13L4.43,12,6.79,8l3.43,1.16a8.86,8.86,0,0,1,2.71-1.57L13.64,4h4.72l.71,3.55a9.36,9.36,0,0,1,2.7,1.57L25.21,8,27.57,12l-2.72,2.4a8.9,8.9,0,0,1,0,3.13L27.57,20Z"
            />
            <path
              d="M16,22a6,6,0,1,1,6-6A5.94,5.94,0,0,1,16,22Zm0-10a3.91,3.91,0,0,0-4,4,3.91,3.91,0,0,0,4,4,3.91,3.91,0,0,0,4-4A3.91,3.91,0,0,0,16,12Z"
            />
          </svg>
        </button>
      </li>
      <li>
        <button
          aria-expanded="false"
          aria-label="Toggle support"
          class="security--button--icon security--toolbar__button security--button--icon--tooltip security--button--icon--tooltip--right"
        >
          <svg
            aria-hidden="true"
            class="security--icon security--toolbar__icon"
            fill="currentColor"
            focusable="false"
            height="20"
            preserveAspectRatio="xMidYMid meet"
            style="will-change:transform"
            viewBox="0 0 32 32"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"
            />
            <circle
              cx="16"
              cy="23.5"
              r="1.5"
            />
            <path
              d="M17,8H15.5A4.49,4.49,0,0,0,11,12.5V13h2v-.5A2.5,2.5,0,0,1,15.5,10H17a2.5,2.5,0,0,1,0,5H15v4.5h2V17a4.5,4.5,0,0,0,0-9Z"
            />
          </svg>
        </button>
      </li>
    </ul>
  </nav>
  <span
    class="security--transition"
  />
</div>
`;

exports[`Toolbar Rendering renders the panel correctly 1`] = `
<div>
  <nav
    className="security--toolbar class"
  >
    <ul
      className="security--toolbar__group"
    >
      <li>
        <IconButton
          aria-controls="security--toolbar--toolbar--menu"
          aria-expanded={true}
          aria-label="Toggle menu"
          className="security--toolbar__button security--toolbar__button--active"
          iconClassName="security--toolbar__icon"
          iconSize={20}
          label="Toggle menu"
          onClick={[Function]}
          path={null}
          renderIcon={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "render": [Function],
            }
          }
          size={null}
          state={true}
          tooltip={false}
          tooltipDirection="right"
        />
      </li>
      <li>
        <IconButton
          aria-expanded={false}
          aria-label="Toggle settings"
          className="security--toolbar__button"
          iconClassName="security--toolbar__icon"
          iconSize={20}
          label="Toggle settings"
          onClick={[Function]}
          path={null}
          renderIcon={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "render": [Function],
            }
          }
          size={null}
          state={false}
          tooltip={true}
          tooltipDirection="right"
        />
      </li>
      <li>
        <IconButton
          aria-expanded={false}
          aria-label="Toggle support"
          className="security--toolbar__button"
          iconClassName="security--toolbar__icon"
          iconSize={20}
          label="Toggle support"
          onClick={[Function]}
          path={null}
          renderIcon={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "render": [Function],
            }
          }
          size={null}
          state={false}
          tooltip={true}
          tooltipDirection="right"
        />
      </li>
    </ul>
  </nav>
  <Transition
    className="security--toolbar"
    component="span"
    timeout={160}
  >
    <aside
      className="security--toolbar__panel"
      id="security--toolbar--toolbar--menu"
      role="menu"
    >
      <Transition
        className="security--toolbar__content"
        component="span"
        key="menu"
        timeout={160}
      />
      <Transition
        className="security--toolbar__content"
        component="span"
        key="settings"
        timeout={160}
      />
      <Transition
        className="security--toolbar__content"
        component="span"
        key="support"
        timeout={160}
      />
    </aside>
  </Transition>
</div>
`;

exports[`Toolbar With renderAddons should click the addon icon 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "target": "camera",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Toolbar With renderAddons should focus the addon icon 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "target": "camera",
        "type": "focus",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Toolbar With renderAddons should hover the addon icon 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "target": "camera",
        "type": "mouse over",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Toolbar With renderAddons should render the addon icon tooltip 1`] = `null`;

exports[`Toolbar With renderAddons should render the addon icon tooltip 2`] = `null`;

exports[`Toolbar With renderAddons should render the toolbar with addon icon 1`] = `
<div>
  <nav
    className="security--toolbar"
  >
    <ul
      className="security--toolbar__group"
    >
      <li>
        <IconButton
          aria-expanded={false}
          aria-label="Toggle menu"
          className="security--toolbar__button"
          iconClassName="security--toolbar__icon"
          iconSize={20}
          label="Toggle menu"
          onClick={[Function]}
          path={null}
          renderIcon={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "render": [Function],
            }
          }
          size={null}
          state={false}
          tooltip={true}
          tooltipDirection="right"
        />
      </li>
      <li>
        <IconButton
          aria-expanded={false}
          aria-label="Toggle settings"
          className="security--toolbar__button"
          iconClassName="security--toolbar__icon"
          iconSize={20}
          label="Toggle settings"
          onClick={[Function]}
          path={null}
          renderIcon={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "render": [Function],
            }
          }
          size={null}
          state={false}
          tooltip={true}
          tooltipDirection="right"
        />
      </li>
      <li>
        <IconButton
          aria-expanded={false}
          aria-label="Toggle support"
          className="security--toolbar__button"
          iconClassName="security--toolbar__icon"
          iconSize={20}
          label="Toggle support"
          onClick={[Function]}
          path={null}
          renderIcon={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "render": [Function],
            }
          }
          size={null}
          state={false}
          tooltip={true}
          tooltipDirection="right"
        />
      </li>
      <li
        key="example-addon"
      >
        <IconButton
          aria-label="Example addon"
          className="security--toolbar__button"
          iconClassName="security--toolbar__icon"
          iconSize={20}
          label={null}
          onClick={[MockFunction]}
          onFocus={[MockFunction]}
          onMouseOver={[MockFunction]}
          path={null}
          renderIcon={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "render": [Function],
            }
          }
          size={null}
          state={false}
          tooltip={true}
          tooltipDirection="bottom"
        />
      </li>
    </ul>
  </nav>
  <Transition
    className="security--toolbar"
    component="span"
    timeout={160}
  />
</div>
`;

exports[`Toolbar With renderAddons should render the toolbar with addon icon 2`] = `
<div>
  <nav
    class="security--toolbar"
  >
    <ul
      class="security--toolbar__group"
    >
      <li>
        <button
          aria-expanded="false"
          aria-label="Toggle menu"
          class="security--button--icon security--toolbar__button security--button--icon--tooltip security--button--icon--tooltip--right"
        >
          <svg
            aria-hidden="true"
            class="security--icon security--toolbar__icon"
            fill="currentColor"
            focusable="false"
            height="20"
            preserveAspectRatio="xMidYMid meet"
            style="will-change:transform"
            viewBox="0 0 20 20"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 14.8H18V16H2zM2 11.2H18V12.399999999999999H2zM2 7.6H18V8.799999999999999H2zM2 4H18V5.2H2z"
            />
          </svg>
        </button>
      </li>
      <li>
        <button
          aria-expanded="false"
          aria-label="Toggle settings"
          class="security--button--icon security--toolbar__button security--button--icon--tooltip security--button--icon--tooltip--right"
        >
          <svg
            aria-hidden="true"
            class="security--icon security--toolbar__icon"
            fill="currentColor"
            focusable="false"
            height="20"
            preserveAspectRatio="xMidYMid meet"
            style="will-change:transform"
            viewBox="0 0 32 32"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M27,16.76c0-.25,0-.5,0-.76s0-.51,0-.77l1.92-1.68A2,2,0,0,0,29.3,11L26.94,7a2,2,0,0,0-1.73-1,2,2,0,0,0-.64.1l-2.43.82a11.35,11.35,0,0,0-1.31-.75l-.51-2.52a2,2,0,0,0-2-1.61H13.64a2,2,0,0,0-2,1.61l-.51,2.52a11.48,11.48,0,0,0-1.32.75L7.43,6.06A2,2,0,0,0,6.79,6,2,2,0,0,0,5.06,7L2.7,11a2,2,0,0,0,.41,2.51L5,15.24c0,.25,0,.5,0,.76s0,.51,0,.77L3.11,18.45A2,2,0,0,0,2.7,21L5.06,25a2,2,0,0,0,1.73,1,2,2,0,0,0,.64-.1l2.43-.82a11.35,11.35,0,0,0,1.31.75l.51,2.52a2,2,0,0,0,2,1.61h4.72a2,2,0,0,0,2-1.61l.51-2.52a11.48,11.48,0,0,0,1.32-.75l2.42.82a2,2,0,0,0,.64.1,2,2,0,0,0,1.73-1L29.3,21a2,2,0,0,0-.41-2.51ZM25.21,24l-3.43-1.16a8.86,8.86,0,0,1-2.71,1.57L18.36,28H13.64l-.71-3.55a9.36,9.36,0,0,1-2.7-1.57L6.79,24,4.43,20l2.72-2.4a8.9,8.9,0,0,1,0-3.13L4.43,12,6.79,8l3.43,1.16a8.86,8.86,0,0,1,2.71-1.57L13.64,4h4.72l.71,3.55a9.36,9.36,0,0,1,2.7,1.57L25.21,8,27.57,12l-2.72,2.4a8.9,8.9,0,0,1,0,3.13L27.57,20Z"
            />
            <path
              d="M16,22a6,6,0,1,1,6-6A5.94,5.94,0,0,1,16,22Zm0-10a3.91,3.91,0,0,0-4,4,3.91,3.91,0,0,0,4,4,3.91,3.91,0,0,0,4-4A3.91,3.91,0,0,0,16,12Z"
            />
          </svg>
        </button>
      </li>
      <li>
        <button
          aria-expanded="false"
          aria-label="Toggle support"
          class="security--button--icon security--toolbar__button security--button--icon--tooltip security--button--icon--tooltip--right"
        >
          <svg
            aria-hidden="true"
            class="security--icon security--toolbar__icon"
            fill="currentColor"
            focusable="false"
            height="20"
            preserveAspectRatio="xMidYMid meet"
            style="will-change:transform"
            viewBox="0 0 32 32"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"
            />
            <circle
              cx="16"
              cy="23.5"
              r="1.5"
            />
            <path
              d="M17,8H15.5A4.49,4.49,0,0,0,11,12.5V13h2v-.5A2.5,2.5,0,0,1,15.5,10H17a2.5,2.5,0,0,1,0,5H15v4.5h2V17a4.5,4.5,0,0,0,0-9Z"
            />
          </svg>
        </button>
      </li>
      <li>
        <button
          aria-label="Example addon"
          class="security--button--icon security--toolbar__button"
        >
          <svg
            aria-hidden="true"
            class="security--icon security--toolbar__icon"
            fill="currentColor"
            focusable="false"
            height="20"
            preserveAspectRatio="xMidYMid meet"
            style="will-change:transform"
            viewBox="0 0 32 32"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M29,26H3a1,1,0,0,1-1-1V8A1,1,0,0,1,3,7H9.46l1.71-2.55A1,1,0,0,1,12,4h8a1,1,0,0,1,.83.45L22.54,7H29a1,1,0,0,1,1,1V25A1,1,0,0,1,29,26ZM4,24H28V9H22a1,1,0,0,1-.83-.45L19.46,6H12.54L10.83,8.55A1,1,0,0,1,10,9H4Z"
            />
            <path
              d="M16,22a6,6,0,1,1,6-6A6,6,0,0,1,16,22Zm0-10a4,4,0,1,0,4,4A4,4,0,0,0,16,12Z"
            />
          </svg>
        </button>
      </li>
    </ul>
  </nav>
  <span
    class="security--transition"
  />
</div>
`;

exports[`Toolbar With renderAddons should render the toolbar with addon icon 3`] = `
<button
  aria-label="Example addon"
  class="security--button--icon security--toolbar__button"
>
  <svg
    aria-hidden="true"
    class="security--icon security--toolbar__icon"
    fill="currentColor"
    focusable="false"
    height="20"
    preserveAspectRatio="xMidYMid meet"
    style="will-change:transform"
    viewBox="0 0 32 32"
    width="20"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M29,26H3a1,1,0,0,1-1-1V8A1,1,0,0,1,3,7H9.46l1.71-2.55A1,1,0,0,1,12,4h8a1,1,0,0,1,.83.45L22.54,7H29a1,1,0,0,1,1,1V25A1,1,0,0,1,29,26ZM4,24H28V9H22a1,1,0,0,1-.83-.45L19.46,6H12.54L10.83,8.55A1,1,0,0,1,10,9H4Z"
    />
    <path
      d="M16,22a6,6,0,1,1,6-6A6,6,0,0,1,16,22Zm0-10a4,4,0,1,0,4,4A4,4,0,0,0,16,12Z"
    />
  </svg>
</button>
`;
